objects/Step__c.object
<CustomObject>
    <fields>
        <fullName>Attachment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for configuration of a case process.  Putting a check in this box instructs the page to require an attachment in order to submit</description>
        <label>Attachment Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Go_to_step__c</fullName>
        <label>Go to step</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Dynamic_Sections__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Dynamic Sections</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_forked_logic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has forked logic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Team__c</fullName>
        <label>Next Team</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Team_display__c</fullName>
        <description>This formula is used for the routing modal.  The formula takes the value for &quot;Who_is_doing_the_Work__c&quot; and replaces underscores with spaces</description>
        <formula>SUBSTITUTE( TEXT(Who_is_doing_the_Work__c) , &apos;_&apos;, &apos; &apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Team display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personas_Can_Accept__c</fullName>
        <inlineHelpText>Comma-separated list of personas who can Accept the Case at this step.</inlineHelpText>
        <label>Personas - Can accept</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Personas_Can_Close__c</fullName>
        <inlineHelpText>Comma-separated list of personas who can Close the Case at this step.</inlineHelpText>
        <label>Personas - Can close</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Personas_Can_Edit__c</fullName>
        <inlineHelpText>Comma-separated list of personas who can Edit the Case at this step.</inlineHelpText>
        <label>Personas - Can edit</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Routing__c</fullName>
        <label>Routing</label>
        <referenceTo>Routing__c</referenceTo>
        <relationshipLabel>Steps</relationshipLabel>
        <relationshipName>Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SLA_Pickup_Days__c</fullName>
        <label>SLA - Pickup (Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Working_Days__c</fullName>
        <label>SLA - Working (Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section_Visible__c</fullName>
        <label>Section Visible</label>
        <picklist>
            <picklistValues>
                <fullName>Section 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 10</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Step_Number__c</fullName>
        <label>Step Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Who_is_doing_the_Work__c</fullName>
        <label>Who is doing the Work</label>
        <picklist>
            <picklistValues>
                <fullName>Accomodations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any Internal User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate_Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel_Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel_Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel_Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defect_Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPC_Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program_Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program_Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional_test_center_manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Results_Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test_Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test_Publishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VSS_Level_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VSS_Level_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VSS_Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Step</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Step_Number__c</columns>
        <columns>Routing__c</columns>
        <columns>Go_to_step__c</columns>
        <columns>Has_Dynamic_Sections__c</columns>
        <columns>Has_forked_logic__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Step</pluralLabel>
    <recordTypes>
        <fullName>Routing_Step</fullName>
        <active>false</active>
        <description>Main Step that is used for routing a Case.</description>
        <label>Routing Step</label>
    </recordTypes>
    <recordTypes>
        <fullName>Section_Sub_Step</fullName>
        <active>true</active>
        <label>Section Sub-Step</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>